--- a/MDK-ARM/step_motor/step_motor.build_log.htm
+++ b/MDK-ARM/step_motor/step_motor.build_log.htm
@@ -27,7 +27,16 @@ Project File Date:  06/24/2024
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'step_motor'
-"step_motor\step_motor.axf" - 0 Error(s), 0 Warning(s).
+compiling stm32f1xx_it.c...
+compiling step_motor.c...
+../Core/Inc/my_pwm.h(9): warning:  #1-D: last line of file ends without a newline
+  #endif
+..\Core\Src\step_motor.c: 1 warning, 0 errors
+compiling main.c...
+linking...
+Program Size: Code=24396 RO-data=1092 RW-data=36 ZI-data=2668  
+FromELF: creating hex file...
+"step_motor\step_motor.axf" - 0 Error(s), 1 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -60,7 +69,7 @@ Package Vendor: Keil
 
    * Component: Keil.ARM Compiler::Compiler:I/O:STDOUT:Breakpoint:1.2.0
       Source file:   Source\retarget_io.c
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:03
 </pre>
 </body>
 </html>
