--- a/MDK-ARM/step_motor/step_motor.build_log.htm
+++ b/MDK-ARM/step_motor/step_motor.build_log.htm
@@ -27,11 +27,11 @@ Project File Date:  06/24/2024
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'step_motor'
-compiling servo.c...
-compiling my_pwm.c...
 compiling step_motor.c...
+compiling stm32f1xx_it.c...
+compiling main.c...
 linking...
-Program Size: Code=24396 RO-data=1092 RW-data=36 ZI-data=2668  
+Program Size: Code=24348 RO-data=1092 RW-data=36 ZI-data=3180  
 FromELF: creating hex file...
 "step_motor\step_motor.axf" - 0 Error(s), 0 Warning(s).
 
