--- a/MDK-ARM/step_motor/step_motor.build_log.htm
+++ b/MDK-ARM/step_motor/step_motor.build_log.htm
@@ -26,10 +26,33 @@ Project File Date:  06/24/2024
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
-Build target 'step_motor'
+Rebuild target 'step_motor'
+assembling startup_stm32f103xb.s...
+compiling servo.c...
+compiling my_pwm.c...
+compiling my_uart.c...
+compiling stm32f1xx_hal_gpio_ex.c...
 compiling step_motor.c...
+compiling stm32f1xx_hal_msp.c...
+compiling main.c...
+compiling stm32f1xx_it.c...
+compiling stm32f1xx_hal.c...
+compiling stm32f1xx_hal_rcc_ex.c...
+compiling stm32f1xx_hal_gpio.c...
+compiling stm32f1xx_hal_cortex.c...
+compiling stm32f1xx_hal_dma.c...
+compiling stm32f1xx_hal_rcc.c...
+compiling stm32f1xx_hal_tim_ex.c...
+compiling retarget_io.c...
+compiling stm32f1xx_hal_tim.c...
+compiling stm32f1xx_hal_flash.c...
+compiling stm32f1xx_hal_pwr.c...
+compiling stm32f1xx_hal_flash_ex.c...
+compiling system_stm32f1xx.c...
+compiling stm32f1xx_hal_exti.c...
+compiling stm32f1xx_hal_uart.c...
 linking...
-Program Size: Code=24332 RO-data=1092 RW-data=36 ZI-data=4716  
+Program Size: Code=23540 RO-data=1092 RW-data=36 ZI-data=3180  
 FromELF: creating hex file...
 "step_motor\step_motor.axf" - 0 Error(s), 0 Warning(s).
 
@@ -64,7 +87,7 @@ Package Vendor: Keil
 
    * Component: Keil.ARM Compiler::Compiler:I/O:STDOUT:Breakpoint:1.2.0
       Source file:   Source\retarget_io.c
-Build Time Elapsed:  00:00:02
+Build Time Elapsed:  00:00:16
 </pre>
 </body>
 </html>
