--- a/MDK-ARM/step_motor/step_motor.build_log.htm
+++ b/MDK-ARM/step_motor/step_motor.build_log.htm
@@ -28,33 +28,43 @@ Project File Date:  06/24/2024
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Rebuild target 'step_motor'
 assembling startup_stm32f103xb.s...
-compiling servo.c...
-compiling my_pwm.c...
-compiling my_uart.c...
-compiling stm32f1xx_hal_gpio_ex.c...
-compiling step_motor.c...
-compiling stm32f1xx_hal_msp.c...
-compiling main.c...
 compiling stm32f1xx_it.c...
+../Core/Inc/step_motor.h(74): error:  #20: identifier "DIRECT_TYPE" is undefined
+  void stepmotor_set_rotate_direct(STEPMOTOR_STRUCT *stepmotor, DIRECT_TYPE rotate_direct);
+../Core/Src/stm32f1xx_it.c: 0 warnings, 1 error
+compiling step_motor.c...
+../Core/Inc/step_motor.h(74): error:  #20: identifier "DIRECT_TYPE" is undefined
+  void stepmotor_set_rotate_direct(STEPMOTOR_STRUCT *stepmotor, DIRECT_TYPE rotate_direct);
+..\Core\Src\step_motor.c(209): error:  #20: identifier "STEPNUM" is undefined
+  	for(int i=1; i<STEPNUM; i++)
+..\Core\Src\step_motor.c(215): error:  #20: identifier "STEPNUM" is undefined
+  	for(int i=STEPNUM-1; i>=1; i--)
+..\Core\Src\step_motor.c: 0 warnings, 3 errors
+compiling main.c...
+../Core/Inc/step_motor.h(74): error:  #20: identifier "DIRECT_TYPE" is undefined
+  void stepmotor_set_rotate_direct(STEPMOTOR_STRUCT *stepmotor, DIRECT_TYPE rotate_direct);
+../Core/Src/main.c: 0 warnings, 1 error
+compiling stm32f1xx_hal_gpio_ex.c...
+compiling my_uart.c...
+compiling my_pwm.c...
+compiling stm32f1xx_hal_msp.c...
+compiling servo.c...
 compiling stm32f1xx_hal.c...
-compiling stm32f1xx_hal_rcc_ex.c...
-compiling stm32f1xx_hal_gpio.c...
-compiling stm32f1xx_hal_cortex.c...
-compiling stm32f1xx_hal_dma.c...
-compiling stm32f1xx_hal_rcc.c...
-compiling stm32f1xx_hal_tim_ex.c...
-compiling retarget_io.c...
 compiling stm32f1xx_hal_tim.c...
-compiling stm32f1xx_hal_flash.c...
+compiling stm32f1xx_hal_tim_ex.c...
+compiling stm32f1xx_hal_cortex.c...
+compiling stm32f1xx_hal_rcc_ex.c...
+compiling stm32f1xx_hal_dma.c...
+compiling stm32f1xx_hal_gpio.c...
+compiling stm32f1xx_hal_rcc.c...
+compiling retarget_io.c...
 compiling stm32f1xx_hal_pwr.c...
-compiling stm32f1xx_hal_flash_ex.c...
+compiling stm32f1xx_hal_flash.c...
 compiling system_stm32f1xx.c...
 compiling stm32f1xx_hal_exti.c...
+compiling stm32f1xx_hal_flash_ex.c...
 compiling stm32f1xx_hal_uart.c...
-linking...
-Program Size: Code=23540 RO-data=1092 RW-data=36 ZI-data=3180  
-FromELF: creating hex file...
-"step_motor\step_motor.axf" - 0 Error(s), 0 Warning(s).
+"step_motor\step_motor.axf" - 5 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -87,7 +97,8 @@ Package Vendor: Keil
 
    * Component: Keil.ARM Compiler::Compiler:I/O:STDOUT:Breakpoint:1.2.0
       Source file:   Source\retarget_io.c
-Build Time Elapsed:  00:00:16
+Target not created.
+Build Time Elapsed:  00:00:17
 </pre>
 </body>
 </html>
