--- a/MDK-ARM/step_motor/step_motor.build_log.htm
+++ b/MDK-ARM/step_motor/step_motor.build_log.htm
@@ -21,12 +21,39 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.8.0
 Dialog DLL:      TCM.DLL V1.48.0.0
  
 <h2>Project:</h2>
-E:\Projects\CNCMini\step_motor\MDK-ARM\step_motor.uvprojx
-Project File Date:  06/24/2024
+E:\Projects\CNCMini\ploter_github\StepmoterDrawingSimple\MDK-ARM\step_motor.uvprojx
+Project File Date:  09/01/2024
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
-Build target 'step_motor'
+Rebuild target 'step_motor'
+assembling startup_stm32f103xb.s...
+compiling my_uart.c...
+compiling stm32f1xx_hal_gpio_ex.c...
+compiling my_pwm.c...
+compiling main.c...
+compiling servo.c...
+compiling stm32f1xx_it.c...
+compiling stm32f1xx_hal_msp.c...
+compiling step_motor.c...
+compiling stm32f1xx_hal_cortex.c...
+compiling stm32f1xx_hal_gpio.c...
+compiling stm32f1xx_hal.c...
+compiling stm32f1xx_hal_dma.c...
+compiling stm32f1xx_hal_rcc_ex.c...
+compiling stm32f1xx_hal_rcc.c...
+compiling stm32f1xx_hal_tim_ex.c...
+compiling retarget_io.c...
+compiling stm32f1xx_hal_tim.c...
+compiling stm32f1xx_hal_flash_ex.c...
+compiling stm32f1xx_hal_pwr.c...
+compiling stm32f1xx_hal_exti.c...
+compiling system_stm32f1xx.c...
+compiling stm32f1xx_hal_flash.c...
+compiling stm32f1xx_hal_uart.c...
+linking...
+Program Size: Code=23232 RO-data=1088 RW-data=36 ZI-data=2788  
+FromELF: creating hex file...
 "step_motor\step_motor.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -60,7 +87,7 @@ Package Vendor: Keil
 
    * Component: Keil.ARM Compiler::Compiler:I/O:STDOUT:Breakpoint:1.2.0
       Source file:   Source\retarget_io.c
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:13
 </pre>
 </body>
 </html>
